test/files/ill-typed/008_let_lambda.lam
let f = λx. x + 1 in f true
